@@ -1,0 +1,164 @@
+/*
+ * $Id$
+ *
+ * :ts=4
+ *
+ * Portable ISO 'C' (1994) runtime library for the Amiga computer
+ * Copyright (c) 2002-2006 by Olaf Barthel <olsen (at) sourcery.han.de>
+ * All rights reserved.
+ *
+ * Redistribution and use in source and binary forms, with or without
+ * modification, are permitted provided that the following conditions
+ * are met:
+ *
+ *   - Redistributions of source code must retain the above copyright
+ *     notice, this list of conditions and the following disclaimer.
+ *
+ *   - Neither the name of Olaf Barthel nor the names of contributors
+ *     may be used to endorse or promote products derived from this
+ *     software without specific prior written permission.
+ *
+ * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
+ * AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
+ * IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
+ * ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE
+ * LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+ * CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
+ * SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
+ * INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
+ * CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
+ * ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
+ * POSSIBILITY OF SUCH DAMAGE.
+ */
+
+#ifndef _STRING_HEADERS_H
+#include "string_headers.h"
+#endif /* _STRING_HEADERS_H */
+
+#ifndef _STDLIB_HEADERS_H
+#include "stdlib_headers.h"
+#endif /* _STDLIB_HEADERS_H */
+
+/****************************************************************************/
+
+static char * error_table[EILSEQ - EPERM + 1] =
+{
+	"Operation not permitted",
+	"No such file or directory",
+	"No such process",
+	"Interrupted system call",
+	"Input/output error",
+	"Device not configured",
+	"Argument list too long",
+	"Exec format error",
+	"Bad file descriptor",
+	"No child processes",
+	"Resource deadlock avoided",
+	"Cannot allocate memory",
+	"Permission denied",
+	"Bad address",
+	"Block device required",
+	"Device busy",
+	"File exists",
+	"Cross-device link",
+	"Operation not supported by device",
+	"Not a directory",
+	"Is a directory",
+	"Invalid argument",
+	"Too many open files in system",
+	"Too many open files",
+	"Inappropriate ioctl for device",
+	"Text file busy",
+	"File too large",
+	"No space left on device",
+	"Illegal seek",
+	"Read-only file system",
+	"Too many links",
+	"Broken pipe",
+	"Numerical argument out of domain",
+	"Result too large",
+	"Resource temporarily unavailable",
+	"Operation now in progress",
+	"Operation already in progress",
+	"Socket operation on non-socket",
+	"Destination address required",
+	"Message too long",
+	"Protocol wrong type for socket",
+	"Protocol not available",
+	"Protocol not supported",
+	"Socket type not supported",
+	"Operation not supported on socket",
+	"Protocol family not supported",
+	"Address family not supported by protocol family",
+	"Address already in use",
+	"Can't assign requested address",
+	"Network is down",
+	"Network is unreachable",
+	"Network dropped connection on reset",
+	"Software caused connection abort",
+	"Connection reset by peer",
+	"No buffer space available",
+	"Socket is already connected",
+	"Socket is not connected",
+	"Can't send after socket shutdown",
+	"Too many references: can't splice",
+	"Connection timed out",
+	"Connection refused",
+	"Too many levels of symbolic links",
+	"File name too long",
+	"Host is down",
+	"No route to host",
+	"Directory not empty",
+	"Too many processes",
+	"Too many users",
+	"Disc quota exceeded",
+	"Stale NFS file handle",
+	"Too many levels of remote in path",
+	"RPC struct is bad",
+	"RPC version wrong",
+	"RPC program not available",
+	"Program version wrong",
+	"Bad procedure for program",
+	"No locks available",
+	"Function not implemented",
+	"Inappropriate file type or format",
+	"Authentication error",
+	"Need authenticator",
+	"Identifier removed",
+	"No message of the desired type.",
+	"Value too large to be stored in data type.",
+	"Encoding error detected"
+};
+
+/****************************************************************************/
+
+int
+strerror_r(int number,char * buffer,size_t buffer_size)
+{
+	int result = -1;
+	char * str;
+	size_t len;
+
+	if(number < EPERM || number > EILSEQ)
+	{
+		__set_errno(EINVAL);
+		goto out;
+	}
+
+	str = error_table[number - EPERM];
+
+	len = strlen(str);
+	if(len >= buffer_size)
+	{
+		__set_errno(ERANGE);
+		goto out;
+	}
+
+	strcpy(buffer,str);
+
+	result = 0;
+
+ out:
+
+	return(result);
+}
